--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        &#1F4BB Tech Blog &#1F4DD
+        Tech Blog
       </h1>
     </header>
       <main class="container container-fluid mt-5">
